--- a/Unidad 1 - Práctica 2/Ejercicio 1/Views/Inscripcion/Usuario.cshtml
+++ b/Unidad 1 - Práctica 2/Ejercicio 1/Views/Inscripcion/Usuario.cshtml
@@ -2,6 +2,6 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    <h2>Formulario de Usuario</h2>
+    <h2>Formulario de Usuario - Ejercicio 1</h2>
     <p>@ViewBag.Mensaje</p>
 }
